--- a/css/styles.css
+++ b/css/styles.css
@@ -216,6 +216,69 @@ ul {
 .footer-address {
   margin-right: 70px;
 }
+
+.footer-mail {
+  margin-left: auto;
+}
+
+.footer-button {
+  
+  display: flex;
+  justify-content: center;
+  align-items: center;;
+
+  background-color: var(--accent-color);
+  color: var(--white-color);
+
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  letter-spacing: 0.06em;
+  cursor: pointer;
+  min-width: 200px;
+  height: 50px;
+  padding: 10px 28px 10px 29px;
+  border-radius: 4px;
+  border: 1px solid transparent;
+  
+}
+
+
+.footer-button-text{
+  margin-right: 10px;
+}
+
+.footer-form{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+.footer-form-icon {
+  padding: 0 auto;
+  
+}
+
+.footer-form-email {
+  width: 358px;
+  height: 50px;
+  margin-right: 12px;
+  padding-left: 16px;
+  background-color: transparent;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  border-radius: 4px;
+  outline: none;
+}
+
+.footer-form-email::placeholder {
+  font-size: 16px;
+  line-height: 1.25;
+  color: rgba(255, 255, 255, 0.6);
+}
+
+
+
+
 /*Site-nav-flex*/
 
 .header .container {
@@ -475,7 +538,7 @@ ul {
 
 .icon-bgr:hover,
 .icon-bgr:focus {
-  color: var(--accent-color);
+  background-color: var(--accent-color);;
 }
 
 /*Сlients */
@@ -669,3 +732,4 @@ ul {
 
   fill: #000;
 }
+
