--- a/css/styles.css
+++ b/css/styles.css
@@ -95,7 +95,7 @@ ul {
   min-width: 73px;
   padding: 6px 22px;
   border-radius: 4px;
-  border: 1px solid transparent;
+  border: transparent;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -240,7 +240,14 @@ ul {
   padding: 10px 28px 10px 29px;
   border-radius: 4px;
   border: 1px solid transparent;
-  
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+ 
+}
+
+.footer-button:hover,
+.footer-button:focus {
+  background: #188CE8;
 }
 
 
@@ -256,18 +263,24 @@ ul {
 
 .footer-form-icon {
   padding: 0 auto;
-  
+  fill: var(--white-color)
 }
 
 .footer-form-email {
+  font-size: 16px;
+  line-height: 1.25;
+
   width: 358px;
   height: 50px;
   margin-right: 12px;
   padding-left: 16px;
+
+  color: var(--white-color);
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
   border-radius: 4px;
   outline: none;
+  
 }
 
 .footer-form-email::placeholder {
@@ -706,7 +719,7 @@ ul {
   box-shadow: var(--card-shadow);
   top: 50%;
   left: 50%;
-  padding: 35px;
+  padding: 40px;
 
   transform: translate(-50%, -50%) scale(1);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -731,5 +744,193 @@ ul {
   transform: translate(-50%, -50%);
 
   fill: #000;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.modal-icon:hover,
+.modal-icon:focus {
+color: currentColor;
+}
+.modal-icon:hover .close-icon,
+.modal-icon:focus .close-icon {
+fill: var(--accent-color) ;
+}
+
+.modal-form-title {
+  font-weight: 700;
+  font-size: 20px;
+  line-height: 1.15;
+  text-align: center;
+  margin-bottom: 12px;
+
+  color: var(--first-text-color);
+}
+
+.modal-form-field {
+  margin-bottom: 10px;
+}
+
+.modal-form-field.comment {
+  margin-bottom: 20px;
+}
+
+
+.form-label {
+  display: block;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.01em;
+  color: var(--second-text-color);
+  margin-bottom: 4px;
+}
+
+.input-wrap {
+  display: block;
+  position: relative;
+}
+
+.form-input {
+  width: 100%;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding-left: 42px;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+
+.form-input:focus {
+
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+
+}
+
+.form-input:focus + .icon-form {
+  fill: var(--accent-color);
+}
+
+.icon-form {
+  position: absolute;
+  left: 12px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: var(--first-text-color);
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-comment {
+  width: 100%;
+  height: 120px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+  padding: 12px 16px;
+  resize: none;
+  outline: none;
+  transition: border 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+}
+
+.form-comment:hover,
+.form-comment:focus {
+
+  border: 1px solid var(--accent-color);
+  border-radius: 4px;
+
+}
+
+.form-comment::placeholder {
+
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.01em;
+
+  color: rgba(117, 117, 117, 0.5);
+}
+
+
+.check-label {
+  display: flex;
+  align-items: center;
+
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+
+  color: var(--second-text-color);
+  
+  cursor: pointer;
+}
+
+.checkbox-link { 
+  color: var(--accent-color);
+  margin-left: 5px;
+}
+
+.icon-check {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 16px;
+  height: 15px;
+  border: 2px solid var(--text-portfolio);
+  border-radius: 2px;
+  margin-left: 12px;
+  margin-right: 9px;
+
+}
+
+.checkbox:checked + .check-label > .icon-check {
+  background-color: var(--accent-color);
+  border: none;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  padding: 0;
+  overflow: hidden;
+  border: 0;
+  clip: rect(0 0 0 0);
+}
+
+.modal-form-checkbox {
+  margin-bottom: 30px;
+}
+
+.form-button {
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.87;
+  display: flex;
+  align-items: center;
+  text-align: center;
+  letter-spacing: 0.06em;
+
+  color: var(--white-color);
+  background-color: var(--accent-color);
+
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  padding: 10px 55px;
+  border-radius: 4px;
+  border: transparent;
+
+  margin: 0 auto;
+
+  box-shadow: 0px 2px 1px 0px rgba(0, 0, 0, 0.2),
+   0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+  0px 1px 3px 0px rgba(0, 0, 0, 0.12);
+
+  transition: background 250ms cubic-bezier(0.4, 0, 0.2, 1) ;
+
+}
+
+.form-button:hover,
+.form-button:focus {
+  background: #188CE8;
 }
 
