--- a/css/styles.css
+++ b/css/styles.css
@@ -868,7 +868,8 @@ ul {
   border: none;
 }
 
-.checkbox:hover + .check-label > .icon-check {
+.checkbox:hover + .check-label > .icon-check,
+.checkbox:focus + .check-label > .icon-check {
   border-color: var(--accent-color);
 }
 
